45e commit reorg of the files/folder & fixe of footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Description of the website (150 to 180 char maximun)-->
     <meta name="description" content="Lorem Ipsum">
     <!-- Local CSS File-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
     <!-- Local Bootstrap 5.3.0 -->
-    <link href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" 
+    <link href="bootstrap-5.3.0-Alpha-1/css/bootstrap.min.css" 
     rel="stylesheet">
     <!-- Bootstrap Distant Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -445,7 +445,9 @@
                     </div>
                     <br>
                     <button class="w-6 py-8 btn btn-doggy btn-md" type="submit">
-                        <img src="image/Chienlangue&nonlanguepictoalt.png" alt="DogButton" width="72" height="auto" class="picto-theme6 changeDog"><p class="text-light">Envoyez</p></button>
+                        <img src="image/Chienlangue&nonlanguepictoalt.png" alt="DogButton" width="72" height="auto" class="picto-theme6 changeDog">
+                        <p class="text-light">Envoyez</p>
+                    </button>
                 </form>
             </div>
         </fieldset>
@@ -463,7 +465,7 @@
             </ul>
         </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN BEHANCE">
+            <li class="ms-5 ms-md-3 col-lg-"><a class="link-light" href="LIEN BEHANCE">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-behance"
                         viewBox="0 0 16 16">
                         <path
@@ -472,7 +474,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN LINKEDIN">
+            <li class="ms-4  ms-md-3 col-lg-1"><a class="link-light" href="LIEN LINKEDIN">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-linkedin"
                         viewBox="0 0 16 16">
                         <path
@@ -481,7 +483,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN FACEBOOK">
+            <li class="ms-4 ms-md-3 col-lg-1"><a class="link-light" href="LIEN FACEBOOK">
                     <svg width="10" height="22" viewBox="0 0 10 22" fill="white" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <path
@@ -491,7 +493,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN TWITTER">
+            <li class="ms-4 ms-md-3 col-lg-1"><a class="link-light" href="LIEN TWITTER">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-twitter"
                         viewBox="0 0 16 16">
                         <path
@@ -500,7 +502,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN YOUTUBE">
+            <li class="ms-4 ms-md-3 col-lg-1"><a class="link-light" href="LIEN YOUTUBE">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-youtube"
                         viewBox="0 0 16 16">
                         <path
@@ -509,7 +511,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN INSTAGRAM">
+            <li class="ms-4 ms-md-3 col-lg-1"><a class="link-light" href="LIEN INSTAGRAM">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-instagram"
                         viewBox="0 0 16 16">
                         <path
@@ -518,7 +520,7 @@
                 </a>
             </li>
             
-            <li class="ms-3 col-lg-1"><a class="link-light" href="mailto:MAIL ASSOS">
+            <li class="ms-4 ms-md-3 col-lg-1"><a class="link-light" href="mailto:MAIL ASSOS">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" 
                     class="bi bi-envelope-at" viewBox="0 0 16 16">
                         <path
@@ -583,7 +585,7 @@
 
 
     <!-- Local Bootstrap Javascript-->
-    <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js"
+    <script src="bootstrap-5.3.0-Alpha-1/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
 
     <!-- Popper and Jquery Distant -->
@@ -596,7 +598,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Local Javascript -->
-    <script src="script.js"></script>
+    <script src="assets/JS/script.js"></script>
 
     <!-- EXTERNAL JAVASCRIPT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.js"></script>
