--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                         </svg>
                     </button>
                     <ul class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-4 p-xl-4">
-                        <li><a class="dropdown-item" href="/My-personal-Association/event.html#">L'évènement</a></li>
-                        <li><a class="dropdown-item" href="/My-personal-Association/event.html#photo-event">Une Photo</a></li>
-                        <li><a class="dropdown-item" href="/My-personal-Association/event.html#text-event">Description</a></li>
+                        <li><a class="dropdown-item" href="event.html#">L'évènement</a></li>
+                        <li><a class="dropdown-item" href="event.html#photo-event">Une Photo</a></li>
+                        <li><a class="dropdown-item" href="event.html#text-event">Description</a></li>
                     </ul>
                 </li>
             </ul>
